# ISSII

./: .gitignore
lab2/: README.md  docker-compose.yml  pyproject.toml
lab2/mlruns/: mlruns.db
lab2/mlruns/1/08c4d05fee3446f0b6a437209cc1b811/artifacts/model/: MLmodel  model.pkl  requirements.txt
lab2/mlruns/1/0fd46d27b4454a6aa131b35e6dd4986a/artifacts/model/: MLmodel  model.pkl
lab2/mlruns/1/2d964c0bb1794c7e8597ed21fc1c678e/artifacts/model/: MLmodel  model.pkl
lab2/mlruns/1/42a728d478c54878acd19d10c1cb4a73/artifacts/model/: MLmodel  model.pkl
lab2/mlruns/1/4e79e5edfb5542c6b5874c8f5e628b2d/artifacts/model/: MLmodel  model.pkl  requirements.txt
lab2/mlruns/1/4f68091e40e84eecbc9fdc027edb51a9/artifacts/model/: MLmodel  requirements.txt
lab2/mlruns/1/5cd233612b9b4a54a2cd1a3996c76586/artifacts/model/: MLmodel
lab2/mlruns/1/6b2388e871af416fb5b3bf05debcebc5/artifacts/model/: MLmodel
lab2/mlruns/1/8a3e223c50d441629440c7e55e1c99dc/artifacts/model/: MLmodel  conda.yaml  model.pkl
lab2/mlruns/1/8b225f2801a7402a9c4206f440cd013b/artifacts/model/: MLmodel  conda.yaml
lab2/mlruns/1/976bc3d70ee44a2991f79095382e16cd/artifacts/model/: MLmodel
lab2/mlruns/1/9afe3dc3a5274b03bbb8e1d01bc8d2de/artifacts/model/: MLmodel
lab2/mlruns/1/af51f69cb4474cc0bfbd3bc9e92fc474/artifacts/model/: MLmodel
lab2/mlruns/1/bc9e9851f3b14a06adcf97488d12815a/artifacts/model/: MLmodel  model.pkl
lab2/mlruns/1/c2cc6fe3bfdc4ce5a16e70fbe54f85ae/artifacts/model/: MLmodel
lab2/src/: __init__.py  config.py  data_loader.py  evaluate.py  experiment.py  plot_utils.py  train.py
(+73 files in other folders)
