[project]
name = "lab2-model-training"
version = "0.1.0"
description = "Обучение модели классификации удовлетворённости клиентов Olist"
requires-python = ">=3.11"
dependencies = [
    "mlflow==2.19.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "xgboost>=2.1.0",
    "imbalanced-learn>=0.12.0",
    "python-dotenv>=1.0.0",
    "lightgbm>=4.0"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]